<resources>
    <string name="app_name">project</string>
    <string name="Security">Security</string>
    <string name="sos">SOS</string>
    <string name="in_case_of_emergency_keep_telling_family_and_my_contact">In case of emergency, keep telling family and my contact</string>
    <string name="guard">GUARD</string>
    <string name="gaurdtext">open when you are in dangerous journey</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="Dashboard">Dashboard</string>
    <string name="gaurd">Guard</string>
    <string name="todo">TODO</string>
    <string name="my_family">My Family</string>
    <string name="tulsi_patel">TULSI PATEL</string>
    <string name="woman">TODO</string>
    <string name="use_location_will_display_here">Use location will display here</string>
    <string name="user_location_will_display_here">user location will display_here</string>
    <string name="l_block_parul_university_limda_waghodia">L-block parul university limda waghodia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">USER</string>
    <string name="dashboard">DASHBOARD</string>

</resources>