<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mainactivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/my_family"
        android:textSize="@dimen/dimen_20_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"> </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16dp"
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#ffff"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="16dp">

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/womanimage"
        android:layout_width="@dimen/dimen_96dp"
        android:layout_height="@dimen/dimen_96dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/woman"
        android:elevation="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="@id/user_card"
        app:layout_constraintTop_toTopOf="@id/user_card"
        android:contentDescription="@string/woman" />
    <TextView
        android:id="@+id/userid"
        android:elevation="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/tulsi_patel"
        android:textSize="@dimen/dimen_20_sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/user_card"
        app:layout_constraintStart_toEndOf="@id/womanimage"/>

    <ImageView
        android:id="@+id/locationpin"
        android:src="@drawable/location"
        android:elevation="@dimen/dimen_16dp"
        android:layout_width="25dp"
        android:layout_height="26sp"
        android:layout_margin="@dimen/dimen_20_sp"
        app:layout_constraintTop_toBottomOf="@id/userid"
        app:layout_constraintStart_toEndOf="@id/womanimage"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/location"
        android:textSize="@dimen/dimen_16dp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_16dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/darker_grey"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:text="@string/l_block_parul_university_limda_waghodia"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/user_card"
        app:layout_constraintStart_toEndOf="@id/locationpin"
        app:layout_constraintTop_toBottomOf="@id/userid"/>

    <ImageView
        android:id="@+id/imgbattery"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:elevation="@dimen/dimen_16dp"
        android:src="@drawable/battery"
        app:layout_constraintStart_toStartOf="@id/womanimage"
        app:layout_constraintTop_toBottomOf="@id/womanimage"
        app:tint="@color/green" />


    <TextView
        android:id="@+id/batterypercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="90%"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgbattery"
        app:layout_constraintStart_toEndOf="@id/imgbattery"
        app:layout_constraintTop_toTopOf="@id/imgbattery"/>










</androidx.constraintlayout.widget.ConstraintLayout>